updated playways links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h1 id="projects-heading">Projects</h1>
         <div class="project playways">
           <figure class="circle">
-            <a href="https://co-canvas.herokuapp.com" target="_blank">
+            <a href="https://katshaze.github.io/playways" target="_blank">
               <img src="images/playways.png" alt="Playways">
               <figcaption><p>See it in action (Chrome on desktop is best for now!)</p></figcaption>
             </a>
