added web audio api visualisation of waltz by elliot smith

--- a/index.html
+++ b/index.html
@@ -94,10 +94,28 @@
             <div class="desc-text">
               <h2>Playways</h2>
               <p>Playways is a sound visualiser and generative art app built using the p5 and p5.sound libraries. It works by continually analysing a song's amplitude and using that data to render visualisations. Every canvas comes out a little differently.</p>
-              <p>Users can listen to preloaded music or switch to mic mode to make/listen to their own music. Note: Currently works best in Chrome on desktop due to difficulties getting around browser restrictions for autoloading and autoplaying sound.</p>
+              <p>Users can listen to preloaded music or switch to mic mode to make/listen to their own music. Note: Currently works best in Chrome & Firefox on desktop due to difficulties getting around browser restrictions for autoloading and autoplaying sound.</p>
             </div>
             <div class="desc-button">
               <button class="code mono"><a href="https://github.com/katshaze/playways" target="_blank">Show me the code!</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="project waltz">
+          <figure class="circle">
+            <a href="https://katshaze.github.io/waltz" target="_blank">
+              <img src="images/waltz.png" alt="Waltz">
+              <figcaption><p>View/listen live (only on desktop for now!)</p></figcaption>
+            </a>
+          </figure>
+          <div class="description">
+            <div class="desc-text">
+              <h2>Music visualisation for Waltz #2</h2>
+              <p>This project is an experiment in using the Web Audio API to analyse and visualise sound, in this case the song Waltz #2 by Elliot Smith from his album XO.</p>
+              <p>It works by measuring the song's frequency and using this data to create a waveform, a frequency bar graph and a pulsing square. Note: Currently works best on desktop rather than mobile.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code mono"><a href="https://github.com/katshaze/waltz" target="_blank">Show me the code!</a></button>
             </div>
           </div>
         </div>
