minor tweak to about text & responsiveness

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="about-text">
           <h1 id="about-heading">About</h1>
           <div class="about-info">
-            <p class="one">I'm a freshly-minted web developer, just emerged from the mind-bending fog of General Assembly's Web Development Immersive course.</p>
+            <p class="one">I'm a freshly-minted web developer, having just emerged from the mind-bending fog of General Assembly's Web Development Immersive course.</p>
             <p>Learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing. And learning computer languages has been just as enjoyable. I'm transitioning to developer from a background in linguistics & project management.</p>
             <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
           </div>
