--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"></a>
             <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"></a>
             <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"></a>
-            <a class="fas fa-file-alt" href="assets/KatrinaHayes_Resume_2018.pdf" target="_blank"></a>
+            <!-- <a class="fas fa-file-alt" href="assets/KatrinaHayes_Resume_2018.pdf" target="_blank"></a> -->
           </div>
         </div>
       </div>
