remove babel, add parcel, restructure files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Katrina Hayes - Web Developer</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="js/canvas.js"></script>
   <link href="images/favicon.png" rel="icon" type="image/x-icon" />
  </head>
  <body>
@@ -30,7 +25,6 @@
             <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"></a>
             <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"></a>
             <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"></a>
-            <!-- <a class="fas fa-file-alt" href="assets/KatrinaHayes_Resume_2018.pdf" target="_blank"></a> -->
           </div>
         </div>
       </div>
@@ -183,5 +177,7 @@
     </footer>
     <canvas id="myCanvas"></canvas>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="./index.js"></script>
  </body>
 </html>
