--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
     <canvas id="myCanvas"></canvas>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="./index.js"></script>
+  <script type="module" src="./index.js"></script>
  </body>
 </html>
