link to js and css separately for parcel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Katrina Hayes - Web Developer</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <link href="images/favicon.png" rel="icon" type="image/x-icon" />
  </head>
@@ -178,6 +180,7 @@
     <canvas id="myCanvas"></canvas>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script type="module" src="./index.js"></script>
+  <script src="./src/canvas.js"></script>
+  <script src="./src/animations.js"></script>
  </body>
 </html>
