--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <body>
     <div class="container">
         <header>
-            <nav>
-                <a id="home-nav" href="#">home</a>
-                <a id="about-nav">about</a>
-                <a id="projects-nav" href="#">projects</a>
-            </nav>
+            <div class="nav-container">
+                <nav>
+                    <a id="home-nav" href="#">home</a>
+                    <a id="about-nav">about</a>
+                    <a id="projects-nav" href="#">projects</a>
+                </nav>
+            </div>
             <div class="spacer"></div>
             <div class="intro">
                 <div class="text-holder">
@@ -45,19 +47,23 @@
                 <div class="about-text">
                     <h1 id="about-heading">About</h1>
                     <div class="about-info">
-                        <p class="one text">I'm a web developer based in Sydney, Australia, currently working as a front-end
-                            dev, but increasing the type and scope of back-end work I take on. Coding has opened my
-                            brain
-                            to new ways of thinking, and I love that I'm in a world of endless learning.</p>
-                        <p class="text"> In 2018 I emerged from the mind-bending fog of General Assembly's Web Development Immersive
-                            course. Learning languages – Spanish, French, Arabic, and most recently Japanese – had long
-                            been my thing, and learning computer languages was just as enjoyable. I transitioned to
-                            web development from a background in linguistics & project management.</p>
-                        <p class="text">When I'm not coding, you'll find me planning trips, reading books, being frustrated &
+                        <p class="one text">I'm a web developer based in Sydney, Australia, currently working as a
+                            frontend dev, but increasing the type and scope of backend work I take on. The main
+                            languages and
+                            frameworks I use in my day-to-day work are ES6, React, SASS and PHP.</p>
+                        <p class="text"> In 2018 I emerged from the mind-bending fog of General Assembly's Web
+                            Development Immersive course. Learning languages – Spanish, French, Arabic, and most
+                            recently Japanese – had long
+                            been my thing, and learning computer languages became a logical next step. Coding has opened
+                            my
+                            brain to new ways of thinking, and I love that I'm in a world of endless learning.</p>
+                        <p class="text">When I'm not coding, you'll find me planning trips, reading books, being
+                            frustrated &
                             fascinated in equal measure by the little people in my life, and in constant need of coffee.
                         </p>
-                        <p class="text">Oh and I like learning to use code to generate art. The background of this website is one
-                            big canvas that slightly changes each time you click on it.</p>
+                        <p class="text">Oh, and I dabble in using code to generate art. The background of this
+                            website is one
+                            big canvas that changes each time you click.</p>
                     </div>
                     <div class="skills mono">
                         <div class="skills-head">
@@ -96,7 +102,8 @@
             <div class="projects">
                 <div class="projects-spacer"></div>
                 <h1 id="projects-heading">Projects</h1>
-                <p class="text">Below are the projects I worked on when I first started coding via General Assembly's Web Development
+                <p class="text">Below are the projects I worked on when I first started coding via General Assembly's
+                    Web Development
                     Immersive course.</p>
                 <div class="project playways">
                     <figure class="circle">
