fix(a11y): add aria-labels to links

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header>
             <div class="nav-container">
                 <nav>
-                    <a id="home-nav" href="#">home</a>
-                    <a id="about-nav">about</a>
-                    <a id="projects-nav" href="#">projects</a>
+                    <a id="home-nav" href="#" aria-label="Go to Home">home</a>
+                    <a id="about-nav" href="#" aria-label="Go to About section">about</a>
+                    <a id="projects-nav" href="#" aria-label="Go to Projects section">projects</a>
                 </nav>
             </div>
             <div class="spacer"></div>
@@ -29,10 +29,12 @@
                     <h1 class="hello">Katrina Hayes</h1>
                     <h1>Web developer</h1>
                     <div class='contact-icons'>
-                        <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"></a>
-                        <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/"
-                            target="_blank"></a>
-                        <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"></a>
+                        <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"
+                            aria-label="View my Github profile"></a>
+                        <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"
+                            aria-label="View my Linkedin profile"></a>
+                        <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"
+                            aria-label="Go to my Twitter page"></a>
                     </div>
                 </div>
             </div>
@@ -107,7 +109,8 @@
                     Immersive course.</p>
                 <div class="project playways">
                     <figure class="circle">
-                        <a href="https://katshaze.github.io/playways" target="_blank">
+                        <a href="https://katshaze.github.io/playways" target="_blank"
+                            aria-label="View the Playways website">
                             <img src="images/playways.png" alt="Playways">
                             <figcaption>
                                 <p>See it in action (Chrome on desktop is best for now!)</p>
@@ -125,14 +128,15 @@
                                 getting around browser restrictions for autoloading and autoplaying sound.</p>
                         </div>
                         <div class="desc-button">
-                            <button class="code mono"><a href="https://github.com/katshaze/playways"
-                                    target="_blank">Show me the code!</a></button>
+                            <button class="code mono"><a href="https://github.com/katshaze/playways" target="_blank"
+                                    aria-label="See the Playways code">Show me the code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project waltz">
                     <figure class="circle">
-                        <a href="https://katshaze.github.io/waltz" target="_blank">
+                        <a href="https://katshaze.github.io/waltz" target="_blank"
+                            aria-label="View the Waltz music visualisation website">
                             <img src="images/waltz.png" alt="Waltz">
                             <figcaption>
                                 <p>View/listen live (only on desktop for now!)</p>
@@ -149,14 +153,16 @@
                                 than mobile.</p>
                         </div>
                         <div class="desc-button">
-                            <button class="code mono"><a href="https://github.com/katshaze/waltz" target="_blank">Show
+                            <button class="code mono"><a href="https://github.com/katshaze/waltz" target="_blank"
+                                    aria-label="See the Waltz music visualisation code">Show
                                     me the code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project co-canvas">
                     <figure class="circle">
-                        <a href="https://co-canvas.herokuapp.com" target="_blank">
+                        <a href="https://co-canvas.herokuapp.com" target="_blank"
+                            aria-label="View the CoCanvas website">
                             <img src="images/cocanvas.png" alt="CoCanvas">
                             <figcaption>
                                 <p>Make pixel art on the live site</p>
@@ -174,14 +180,16 @@
                                 component created in React.js.</p>
                         </div>
                         <div class="desc-button">
-                            <button class="code mono"><a href="https://github.com/cocanvas" target="_blank">Show me the
+                            <button class="code mono"><a href="https://github.com/cocanvas" target="_blank"
+                                    aria-label="See the CoCanvas code">Show me the
                                     code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project bookpinch">
                     <figure class="circle">
-                        <a href="https://bookpinch.herokuapp.com" target="_blank">
+                        <a href="https://bookpinch.herokuapp.com" target="_blank"
+                            aria-label="View the Bookpinch website">
                             <img src="images/bookpinch.png" alt="BookPinch">
                             <figcaption>
                                 <p>View the live site & pinch books</p>
@@ -199,14 +207,15 @@
                                 function as well as the Google Books API for providing a preview link.</p>
                         </div>
                         <div class="desc-button">
-                            <button class="code mono"><a href="https://github.com/katshaze/project1"
-                                    target="_blank">Show me the code!</a></button>
+                            <button class="code mono"><a href="https://github.com/katshaze/project1" target="_blank"
+                                    aria-label="See the BookPinch code">Show me the code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project noughts-crosses">
                     <figure class="circle">
-                        <a href="https://katshaze.github.io/project0" target="_blank">
+                        <a href="https://katshaze.github.io/project0" target="_blank"
+                            aria-label="View the Noughts & Crosses website">
                             <img src="images/noughts&crosses.png" alt="Noughts&Crosses">
                             <figcaption>
                                 <p>View the live site & play a game</p>
@@ -225,8 +234,8 @@
                                 won't soon forget that sweet feeling.</p>
                         </div>
                         <div class="desc-button">
-                            <button class="code mono"><a href="https://github.com/katshaze/project0"
-                                    target="_blank">Show me the code!</a></button>
+                            <button class="code mono"><a href="https://github.com/katshaze/project0" target="_blank"
+                                    aria-label="See the Noughts & Crosses code">Show me the code!</a></button>
                         </div>
                     </div>
                 </div>
@@ -235,7 +244,7 @@
         <footer>
             <div class="final">
                 <p>&#128033; &#128033; &#128033;</p>
-                <a id="foot-nav" href='#'>Return to top</a>
+                <a id="foot-nav" href='#' aria-label="Go back to the top">Return to top</a>
             </div>
         </footer>
         <canvas id="myCanvas"></canvas>
