fix(security): secure cross-origin destination links

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     <h1 class="hello">Katrina Hayes</h1>
                     <h1>Web developer</h1>
                     <div class='contact-icons'>
-                        <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"
+                        <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank" rel="noreferrer"
                             aria-label="View my Github profile"></a>
                         <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"
-                            aria-label="View my Linkedin profile"></a>
+                            rel="noreferrer" aria-label="View my Linkedin profile"></a>
                         <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"
-                            aria-label="Go to my Twitter page"></a>
+                            rel="noreferrer" aria-label="Go to my Twitter page"></a>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     Immersive course.</p>
                 <div class="project playways">
                     <figure class="circle">
-                        <a href="https://katshaze.github.io/playways" target="_blank"
+                        <a href="https://katshaze.github.io/playways" target="_blank" rel="noreferrer"
                             aria-label="View the Playways website">
                             <img src="images/playways.png" alt="Playways">
                             <figcaption>
@@ -129,13 +129,13 @@
                         </div>
                         <div class="desc-button">
                             <button class="code mono"><a href="https://github.com/katshaze/playways" target="_blank"
-                                    aria-label="See the Playways code">Show me the code!</a></button>
+                                    rel="noreferrer" aria-label="See the Playways code">Show me the code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project waltz">
                     <figure class="circle">
-                        <a href="https://katshaze.github.io/waltz" target="_blank"
+                        <a href="https://katshaze.github.io/waltz" target="_blank" rel="noreferrer"
                             aria-label="View the Waltz music visualisation website">
                             <img src="images/waltz.png" alt="Waltz">
                             <figcaption>
@@ -154,14 +154,14 @@
                         </div>
                         <div class="desc-button">
                             <button class="code mono"><a href="https://github.com/katshaze/waltz" target="_blank"
-                                    aria-label="See the Waltz music visualisation code">Show
+                                    rel="noreferrer" aria-label="See the Waltz music visualisation code">Show
                                     me the code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project co-canvas">
                     <figure class="circle">
-                        <a href="https://co-canvas.herokuapp.com" target="_blank"
+                        <a href="https://co-canvas.herokuapp.com" target="_blank" rel="noreferrer"
                             aria-label="View the CoCanvas website">
                             <img src="images/cocanvas.png" alt="CoCanvas">
                             <figcaption>
@@ -181,14 +181,14 @@
                         </div>
                         <div class="desc-button">
                             <button class="code mono"><a href="https://github.com/cocanvas" target="_blank"
-                                    aria-label="See the CoCanvas code">Show me the
+                                    rel="noreferrer" aria-label="See the CoCanvas code">Show me the
                                     code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project bookpinch">
                     <figure class="circle">
-                        <a href="https://bookpinch.herokuapp.com" target="_blank"
+                        <a href="https://bookpinch.herokuapp.com" target="_blank" rel="noreferrer"
                             aria-label="View the Bookpinch website">
                             <img src="images/bookpinch.png" alt="BookPinch">
                             <figcaption>
@@ -208,13 +208,13 @@
                         </div>
                         <div class="desc-button">
                             <button class="code mono"><a href="https://github.com/katshaze/project1" target="_blank"
-                                    aria-label="See the BookPinch code">Show me the code!</a></button>
+                                    rel="noreferrer" aria-label="See the BookPinch code">Show me the code!</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="project noughts-crosses">
                     <figure class="circle">
-                        <a href="https://katshaze.github.io/project0" target="_blank"
+                        <a href="https://katshaze.github.io/project0" target="_blank" rel="noreferrer"
                             aria-label="View the Noughts & Crosses website">
                             <img src="images/noughts&crosses.png" alt="Noughts&Crosses">
                             <figcaption>
@@ -235,7 +235,8 @@
                         </div>
                         <div class="desc-button">
                             <button class="code mono"><a href="https://github.com/katshaze/project0" target="_blank"
-                                    aria-label="See the Noughts & Crosses code">Show me the code!</a></button>
+                                    rel="noreferrer" aria-label="See the Noughts & Crosses code">Show me the
+                                    code!</a></button>
                         </div>
                     </div>
                 </div>
