fix: adjust background colours

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
                 <div class="about-spacer"></div>
                 <div class="about-text">
                     <h1 id="about-heading">About</h1>
-                    <div class="about-info">
-                        <p class="one text">I'm a web developer based in Sydney, Australia, currently working as a
+                    <div class="about-info text">
+                        <p class="one">I'm a web developer based in Sydney, Australia, currently working as a
                             frontend dev, but increasing the type and scope of backend work I take on. The main
                             languages and
                             frameworks I use in my day-to-day work are ES6, React, SASS and PHP.</p>
-                        <p class="text"> In 2018 I emerged from the mind-bending fog of General Assembly's Web
+                        <p> In 2018 I emerged from the mind-bending fog of General Assembly's Web
                             Development Immersive course. Learning languages – Spanish, French, Arabic, and most
                             recently Japanese – had long
                             been my thing, and learning computer languages became a logical next step. Coding has opened
                             my
                             brain to new ways of thinking, and I love that I'm in a world of endless learning.</p>
-                        <p class="text">When I'm not coding, you'll find me planning trips, reading books, being
+                        <p>When I'm not coding, you'll find me planning trips, reading books, being
                             frustrated &
                             fascinated in equal measure by the little people in my life, and in constant need of coffee.
                         </p>
-                        <p class="text">Oh, and I dabble in using code to generate art. The background of this
+                        <p>Oh, and I dabble in using code to generate art. The background of this
                             website is one
                             big canvas that changes each time you click.</p>
                     </div>
