--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         </div>
                         <div class="skills-body">
                             <div>JavaScript (ES6)</div>
-                            <div>jQuery</div>
                             <div>React</div>
+                            <div>jQuery</div>
                             <div>HTML5/CSS3</div>
                             <div>SASS</div>
                             <div>Responsive design</div>
@@ -86,10 +86,11 @@
                     </div>
                     <div class="learning mono">
                         <div class="learning-head">
-                            <h3>Learning</h3>
+                            <h3>In progress</h3>
                         </div>
                         <div class="learning-body">
-                            <div>Node.js</div>
+                            <div>Node.js (& Express)</div>
+                            <div>MongoDB & Mongoose</div>
                             <div>Python</div>
                             <div>Ruby</div>
                             <div>Rails</div>
