fix: refactor including css

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Katrina Hayes - Web Developer</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-    <link href="images/favicon.png" rel="icon" type="image/x-icon" />
+    <link href="./images/favicon.png" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -112,7 +112,7 @@
                     <figure class="circle">
                         <a href="https://katshaze.github.io/playways" target="_blank" rel="noreferrer"
                             aria-label="View the Playways website">
-                            <img src="images/playways.png" alt="Playways">
+                            <img src="./images/playways.png" alt="Playways">
                             <figcaption>
                                 <p>See it in action (Chrome on desktop is best for now!)</p>
                             </figcaption>
@@ -138,7 +138,7 @@
                     <figure class="circle">
                         <a href="https://katshaze.github.io/waltz" target="_blank" rel="noreferrer"
                             aria-label="View the Waltz music visualisation website">
-                            <img src="images/waltz.png" alt="Waltz">
+                            <img src="./images/waltz.png" alt="Waltz">
                             <figcaption>
                                 <p>View/listen live (only on desktop for now!)</p>
                             </figcaption>
@@ -164,7 +164,7 @@
                     <figure class="circle">
                         <a href="https://co-canvas.herokuapp.com" target="_blank" rel="noreferrer"
                             aria-label="View the CoCanvas website">
-                            <img src="images/cocanvas.png" alt="CoCanvas">
+                            <img src="./images/cocanvas.png" alt="CoCanvas">
                             <figcaption>
                                 <p>Make pixel art on the live site</p>
                             </figcaption>
@@ -191,7 +191,7 @@
                     <figure class="circle">
                         <a href="https://bookpinch.herokuapp.com" target="_blank" rel="noreferrer"
                             aria-label="View the Bookpinch website">
-                            <img src="images/bookpinch.png" alt="BookPinch">
+                            <img src="./images/bookpinch.png" alt="BookPinch">
                             <figcaption>
                                 <p>View the live site & pinch books</p>
                             </figcaption>
@@ -217,7 +217,7 @@
                     <figure class="circle">
                         <a href="https://katshaze.github.io/project0" target="_blank" rel="noreferrer"
                             aria-label="View the Noughts & Crosses website">
-                            <img src="images/noughts&crosses.png" alt="Noughts&Crosses">
+                            <img src="./images/noughts&crosses.png" alt="Noughts&Crosses">
                             <figcaption>
                                 <p>View the live site & play a game</p>
                             </figcaption>
